# azin-lang

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  go.mod  go.sum  test.az
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-freebsd.yml  build.yml  deploy-docs.yml  discord-notifications.yml  freebsd.yml  linux.yml  macos.yml  windows.yml
apps/azc/: CMakeLists.txt
apps/azc/include/azc/: cli.hpp
apps/azc/src/: cli.cpp  main.cpp
apps/azin/: CMakeLists.txt
apps/azin/src/: main.cpp  new.cpp  version.cpp
azinc/: CMakeLists.txt
azinc/include/azin/: colors.hpp  helpers.hpp  version.hpp
azinc/src/: helpers.cpp  main.cpp  version.cpp
cli/: CMakeLists.txt
cli/include/azin/: new.hpp  version.hpp
cli/src/: main.cpp  new.cpp  version.cpp
cmake/: Analyzers.cmake  CompilerOptions.cmake  Dependencies.cmake  DetectCompiler.cmake  Doxygen.cmake  Language.cmake  ProjectOptions.cmake
cmd/azc/: main.go
cmd/compiler/: compiler.go  main.go
docs/api/: index.html
docs/api/_/css/: main.css
docs/api/github.com/: index.html
docs/api/github.com/azin-lang/: index.html
docs/api/github.com/azin-lang/Azin/: index.html
docs/api/github.com/azin-lang/Azin/cmd/: index.html
docs/api/github.com/azin-lang/Azin/cmd/compiler/: index.html
docs/api/github.com/azin-lang/Azin/internal/: index.html
docs/api/github.com/azin-lang/Azin/internal/compiler/: index.html
docs/api/github.com/azin-lang/Azin/internal/diagnostics/: index.html
docs/api/github.com/azin-lang/Azin/internal/fs/: index.html
docs/api/github.com/azin-lang/Azin/internal/lexer/: index.html
docs/api/github.com/azin-lang/Azin/internal/token/: index.html
internal/ast/: ast.go  printer.go  printer_debug.go
internal/codegen/: c_compile.go  c_emit.go  c_file.go  c_indent.go  c_transpiler.go
internal/compiler/: compiler.go  options.go
internal/diagnostics/: diagnostic.go  diagnostics.go  engine.go
internal/fs/: filesystem.go
internal/lexer/: char.go  dispatch.go  lexer.go  literal.go  operator.go
internal/parser/: literal.go  parser.go  statement.go
internal/semantic/: analyzer.go  scope.go  symbols.go
internal/source/: file.go
internal/token/: keywords.go  kind.go  kind_string.go  position.go  token.go
libs/: CMakeLists.txt
libs/ast/nodes/: nodes.hpp
libs/frontend/: CMakeLists.txt
libs/frontend/diagnostic/: CMakeLists.txt
libs/frontend/diagnostic/include/azc/: diagnostic.hpp  diagnostic_engine.hpp
libs/frontend/diagnostic/include/azin/: diagnostic.hpp  diagnostic_engine.hpp
libs/frontend/diagnostic/src/: diagnostic_engine.cpp
libs/frontend/lexer/: CMakeLists.txt  lexer.hpp
libs/frontend/lexer/include/azc/: lexer.hpp
libs/frontend/lexer/include/azin/: lexer.hpp
libs/frontend/lexer/src/: lexer.cpp
libs/frontend/parser/: CMakeLists.txt  parser.hpp
libs/frontend/parser/include/azc/: parser.hpp
libs/frontend/parser/src/: parser.cpp
libs/frontend/source/: CMakeLists.txt  source.cpp  source.hpp
libs/frontend/source/include/azc/: source.hpp
libs/frontend/source/include/azin/: source.hpp
libs/frontend/source/src/: source.cpp
libs/frontend/token/: CMakeLists.txt
libs/frontend/token/include/azc/: token.hpp
libs/frontend/token/include/azin/: token.hpp
libs/sema/checker/: checker.hpp
libs/support/: CMakeLists.txt
libs/support/include/azin/support/ansi/: ansi.hpp  codes.hpp  styled_view.hpp
libs/support/include/azin/support/fs/: filesystem.hpp  module_path.hpp
libs/support/src/filesystem/: filesystem.cpp  module_path.cpp
modules/compiler/: go.sum
modules/lsp/: go.sum
scripts/: build.sh
scripts/test/: test.ps1  test.sh
tests/ast/: ast_test.go
tests/codegen/: c_codegen_test.go
tests/codegen/testdata/: README.md  hello.az.c.expected  if_demo.az  if_demo.az.c.expected  struct_demo.az  struct_demo.az.c.expected  vars_demo.az  vars_demo.az.c.expected
tests/compiler/: compiler_test.go
tests/diagnostics/: engine_test.go
tests/e2e/: main_test.go
tests/fs/: filesystem_test.go
tests/lexer/: lexer_test.go
tests/parser/: parser_test.go
tests/parser/testdata/: empty.az.golden  hello.az  hello.az.golden  if_else.az  if_else.az.golden  structs.az  structs.az.golden  vars.az  vars.az.golden
tests/semantic/: analyzer_test.go
tests/source/: file_test.go
tests/token/: keywords_test.go  kind_test.go
